--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   .separate::after,
   .separate::before {
     content: '';
-    @apply border-b border-secondary-200 flex-1;
+    @apply border-b border-secondary-200 flex-1 dark:border-secondary-700;
   }
 
   .separate:not(:empty)::after {
